--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input{
+    @apply border-2 border-gray-300 rounded-md px-1 w-96;
+    @apply mb-4 mr-1
+}
+
+input:focus{
+    @apply border-blue-900
+}
+
+h1{
+    @apply text-blue-900 mb-2 text-xl
+}
+
+label{
+    @apply text-blue-900
+}
